fix: fix overlaping carousel and controls

--- a/src/period-carousel/period-carousel.module.scss
+++ b/src/period-carousel/period-carousel.module.scss
@@ -24,6 +24,7 @@
     padding: 0 20px;
 
     @include breakpoints.lg {
+      z-index: -2;
       bottom: -195px;
       left: 60px;
     }
